# LightTTS

./: .gitignore  README.md  demo_cosyvoice2.py  demo_webui_cosyvoice2.py  package_lighttts.sh  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_mac.txt  requirements_win.txt  run_webui.sh  webui_cosyvoice2.py  解压后运行使用指南.md
BatchGenerate/: batch_random_clone_gui.py  voice_batch_synthesis_gui.py  voice_register_gui.py  voice_register_manager_gui.py
KittenTTS/: demo.py
Matcha-TTS/: README.md
config/: load.yaml
cosyvoice/cli/: cosyvoice.py  model.py
cosyvoice/utils/: class_utils.py  file_utils.py
cosyvoice/vllm/: cosyvoice2.py
demo/: demo_cosyvoice2.py  demo_voxcpm.py  demo_webui_cosyvoice2.py
demo/cosyvoice/: demo_cosyvoice2.py  demo_webui_cosyvoice2.py  inference.py
demo/indextts/: demo_batch.py  demo_long.py  demo_single.py  inference.py  webui.py
demo/kittentts/: demo_kittentts.py  list_voices.py
demo/tts_cosyvoice/: inference.py
demo/tts_indextts/: demo_long.py  demo_single.py  webui.py
demo/tts_kittentts/: demo_kittentts.py
demo/tts_voxcpm/: demo_webui.py  inference.py
demo/voxcpm/: demo_voxcpm.py  demo_webui.py
gui/: infer_cosyvoice_batch_gui.py  infer_cosyvoice_gui.py  infer_indextts_gui.py  infer_voxcpm_gui.py  voice_manager_gui.py
gui/style/: style.qss
indextts/: infer_v2.py  pyproject.toml
kittentts/: onnx_model.py
playground/BatchGenerate/: batch_random_clone_gui.py  infer_cosyvoice_batch_gui.py  voice_batch_synthesis_gui.py  voice_manager_gui.py  voice_register_manager_gui.py
playground/cosyvoice/: infer_cosyvoice.py  infer_cosyvoice_batch_gui.py  infer_cosyvoice_gradio.py  infer_cosyvoice_parallel.py  inference.py  inference_cli.py
playground/indextts/: infer_indextts.py  infer_indextts_cli.py  infer_indextts_parallel.py  inference.py
playground/silent_detect/: split_save.py
playground/tts_cosyvoice/: infer_cosyvoice.py  infer_cosyvoice_batch_gui.py  infer_cosyvoice_gui.py  infer_cosyvoice_parallel.py
playground/tts_indextts/: infer_indextts_parallel.py
playground/tts_voxcpm/: infer_voxcpm_cli.py
playground/voxcpm/: infer_voxcpm.py  infer_voxcpm_parallel.py  inference.py  inference_cli.py
serve/cosyvoice/: cosyvoice_ws.py  接口说明.md
serve/examples/: cosyvoice_client.py  indextts_client.py  voxcpm_client.py
serve/examples_client/: cosyvoice_client.py  indextts_client.py  voxcpm_client.py
serve/indextts/: indextts_ws.py
serve/tts_cosyvoice/: cosyvoice_ws.py  接口说明.md
serve/tts_indextts/: indextts_ws.py  接口说明.md
serve/tts_voxcpm/: voxcpm_ws.py  接口说明.md
serve/voxcpm/: voxcpm_ws.py  接口说明.md
voxcpm/: core.py  pyproject.toml  zipenhancer.py
voxcpm/model/: utils.py  voxcpm.py
voxcpm/modules/audiovae/: audio_vae.py
voxcpm/modules/locdit/: local_dit.py  unified_cfm.py
voxcpm/modules/locenc/: local_encoder.py
voxcpm/modules/minicpm4/: model.py
voxcpm/utils/: text_normalize.py
webui/fastapi/: README.md
webui/fastapi/tts_cosyvoice/: app.py
webui/fastapi/tts_indextts/: app.py
webui/fastapi/tts_models/: app.py
webui/fastapi/tts_voxcpm/: app.py
webui/flask/tts_cosyvoice/: README.md  app.py
webui/gradio/: infer_cosyvoice_gradio.py  infer_indextts_gradio.py  infer_voxcpm_gradio.py  ws_client_cosyvoice_gradio.py  ws_client_indextts_gradio.py  ws_client_voxcpm_gradio.py
(+65 files in other folders)
