[project]
name = "lighttts"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  # PyTorch - macOS only (Linux/Windows need manual install)
  "torch; sys_platform == 'darwin'",
  "torchaudio; sys_platform == 'darwin'",
  
  # Linux-specific packages
  "cython; sys_platform == 'linux'",
  
  # Core ML & NLP packages
  "transformers",
  "accelerate",
  "datasets>=3,<4",
  "peft; sys_platform != 'darwin'",  # Linux and Windows only
  
  # IndexTTS2 specific dependencies
  "jieba==0.42.1",
  "json5==0.10.0", 
  "munch==4.0.0",
  "numba==0.58.1",
  "numpy==1.26.2",
  "safetensors==0.5.2",
  "sentencepiece>=0.2.1",
  "textstat>=0.7.10",
  "tokenizers==0.21.0",
  
  # Audio processing packages
  "conformer",
  "librosa", 
  "soundfile",
  "pyworld",
  "openai-whisper",
  "funasr",
  
  # Deep learning frameworks
  "diffusers",
  "lightning",
  "omegaconf",
  "hydra-core",
  "HyperPyYAML",
  
  # UI & Visualization
  "gradio",
  "pyside6",
  "matplotlib",
  
  # Text processing
  # Use "wetext" on Windows/Mac, otherwise "WeTextProcessing" on Linux.
  "wetext>=0.0.9; sys_platform != 'linux'",
  "WeTextProcessing==1.0.3; sys_platform == 'linux'",
  "inflect",
  
  # Utilities & Tools
  "modelscope",
  "gdown",
  "wget",
  "einops",
  "addict",
  "pydantic",
  "tqdm",
  "simplejson",
  "sortedcontainers",
  
  # Export & Runtime
  "onnx",
  "onnxruntime",
  "pyarrow",
  
  # macOS-specific KittenTTS wheel package
  "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.1/kittentts-0.1.0-py3-none-any.whl ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# To install DeepSpeed support: pip install -e ".[deepspeed]"
deepspeed = [
  "deepspeed==0.17.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cosyvoice*", "indextts*", "voxcpm*"]
exclude = ["demo*", "asset*", "BatchGenerate*", "Matcha-TTS*"]