[project]
name = "indextts"
requires-python = ">=3.10"
dependencies = [
  # Core dependencies for IndexTTS2 inference only
  "jieba==0.42.1",
  "json5==0.10.0",
  "munch==4.0.0",
  "numba==0.58.1",
  "numpy==1.26.2",
  "safetensors==0.5.2",
  "sentencepiece>=0.2.1",
  "textstat>=0.7.10",
  "tokenizers==0.21.0",
  "accelerate==1.8.1",

  # Use "wetext" on Windows/Mac, otherwise "WeTextProcessing" on Linux.
  "wetext>=0.0.9; sys_platform != 'linux'",
  "WeTextProcessing; sys_platform == 'linux'",
]

[project.optional-dependencies]
# To install DeepSpeed support: pip install -e ".[deepspeed]"
deepspeed = [
  "deepspeed==0.17.1",
]
