[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "voxcpm"
dynamic = ["version"]
description = "VoxCPM: Tokenizer-Free TTS for Context-Aware Speech Generation and True-to-Life Voice Cloning"

requires-python = ">=3.8"
dependencies = [
    "einops",
    "addict",
    "wetext",
    "datasets>=3,<4",
    "pydantic",
    "tqdm",
    "simplejson",
    "sortedcontainers",
    "funasr"
]

[tool.setuptools.packages.find]
include = ["voxcpm*"]

[tool.setuptools_scm]
version_scheme = "post-release"
